--- a/.github/workflows/check-syntax.yml
+++ b/.github/workflows/check-syntax.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Download Markdown
         uses: actions/checkout@v2.0.0
       - name: Run Syntax Checks 
-        uses: hashicorp/learn-inspec@master
+        uses: hashicorp/learn-inspec@io
         with:
           profile: 'github'
           markdown: ${{github.workspace}}
